--- a/ship-ui/reimb-by-user-id/reimb.by.user.id.html
+++ b/ship-ui/reimb-by-user-id/reimb.by.user.id.html
@@ -27,9 +27,16 @@
         <li class="nav-item active">
           <a class="nav-link" href="../home/home.html">Home <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item">
-          <!-- <a class="nav-link" href="#">Link</a> -->
-        </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
+              aria-expanded="false">Reimbursement</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown04">
+              <a class="dropdown-item" href="#">Empty</a>
+              <a class="dropdown-item" href="#">Empty</a>
+              <a class="dropdown-item" href="../reimb-by-status/reimb.by.status.html">Lookup by Request's Status</a>
+              <!-- <a class="dropdown-item" href="../reimb-by-user-id/reimb.by.user.id.html">LookUp by User ID</a> -->
+            </div>
+          </li>
         <li class="nav-item">
           <a class="nav-link disabled" href="#">Disabled</a>
         </li>
