--- a/ship-ui/userById/userById.html
+++ b/ship-ui/userById/userById.html
@@ -32,7 +32,7 @@
                 aria-expanded="false">Reimbursement</a>
             <div class="dropdown-menu" aria-labelledby="dropdown04">
                 <a class="dropdown-item" href="#">Empty</a>
-                <a class="dropdown-item" href="#">Empty</a>
+                <a class="dropdown-item" href="../submit-new-request/submit.new.request.html">Submit New Request</a>
                 <a class="dropdown-item" href="../reimb-by-status/reimb.by.status.html">Lookup by Request's Status</a>
                 <a class="dropdown-item" href="../reimb-by-user-id/reimb.by.user.id.html">LookUp by User ID</a>
             </div>
@@ -46,11 +46,11 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">Users</a>
-          <div class="dropdown-menu" aria-labelledby="dropdown04">
-            <a class="dropdown-item" href="../create-spaceship/create-spaceship.html">Create</a>
-            <a class="dropdown-item" href="../allUsers/allUsers.html">Look up users</a>
-            <!-- <a class="dropdown-item" href="#">Something else here</a> -->
-          </div>
+            <div class="dropdown-menu" aria-labelledby="dropdown04">
+              <a class="dropdown-item" href="../update-user/update.user.html">Update User</a>
+              <a class="dropdown-item" href="../allUsers/allUsers.html">Look up users</a>
+              <a class="dropdown-item" href="../userById/userById.html">Look up User by ID (Current)</a>
+            </div>
         </li>
       </ul>
       <ul class="navbar-nav">
