--- a/ship-ui/update-user/update.user.html
+++ b/ship-ui/update-user/update.user.html
@@ -67,6 +67,32 @@
   <div class="form-group" onclick= "updateUser()">
     <label for="user-id-input">User Id:</label>
     <input type="number" class="form-control" id="user-id-input" aria-describedby="emailHelp" placeholder="Enter User Id">
+    <br>
+    
+    <label for="username-input">Username:</label>
+    <input type="text" class="form-control" id="username-input" aria-describedby="emailHelp" placeholder="Enter Username">
+    <br>
+
+    <label for="password-input">Password:</label>
+    <input type="text" class="form-control" id="password-input" aria-describedby="emailHelp" placeholder="Enter Password">
+    <br>
+
+    <label for="firstname-input">Frstname:</label>
+    <input type="text" class="form-control" id="firstname-input" aria-describedby="emailHelp" placeholder="Enter Firstname">
+    <br>
+
+    <label for="lastname-input">Lastname:</label>
+    <input type="text" class="form-control" id="lastname-input" aria-describedby="emailHelp" placeholder="Enter Lastname">
+    <br>
+
+    <label for="email-input">Email:</label>
+    <input type="text" class="form-control" id="email-input" aria-describedby="emailHelp" placeholder="Enter Email">
+    <br>
+
+    <label for="role-input">Role:</label>
+    <input type="text" class="form-control" id="role-input" aria-describedby="emailHelp" placeholder="Enter Role">
+    <br>
+
     <button  class="btn btn-primary" >Submit</button>
   </div>
     
